[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rock"
version = "0.0.4"
description = "RObotrade Crypto Kit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="nomnoms12", email="alexander.ign0918@gmail.com" },
  { name="khanbekov", email="khanbekov.blockchain@gmail.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["websockets ~= 10.3"]

[project.urls]
"Homepage" = "https://github.com/RoboTradeCode/rock"
"Bug Tracker" = "https://github.com/RoboTradeCode/rock/issues"
